all articles added

--- a/main/templates/main/Articles/MLAI/1001.html
+++ b/main/templates/main/Articles/MLAI/1001.html
@@ -2,7 +2,105 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div style="text-align: center">
+        <h3 class="article-subhead">History of Artificial Intelligence and Machine Learning.</h3>
+    </div> 
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Shreyas PJ</a></b>
+        <br><br>
+        <i>“I visualize a time when we will be to robots what dogs are to humans, and I’m rooting for the machines.” — Claude Shannon.</i>
+    </div>
+    <br>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 70%;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                7 Decades of evolution.
+            </b>
+        </p>
+    </div>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 70%;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                This shows us that AI was established well before ML.
+            </b>
+        </p>
+    </div>
+    <p class="article-content">
+        The above images clearly state that AI and its technologies started back in the early 1950s whereas Machine Learning has advanced in the world for the past 4 decades only.
+    </p>
+    <p class="article-subhead">
+        Relationship between AI and ML.
+    </p>
+    <p class="article-content">
+        Artificial Intelligence can be used to solve real-world problems by implementing the following processes/ techniques:
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>1.Machine Learning</b></li>
+            </ul>
+            <ul>
+                <li><b>2.Deep Learning</b></li>
+            </ul>
+            <ul>
+                <li><b>3.Natural Language Processing</b></li>
+            </ul>
+             <ul>
+                 <li><b>4.Robotics</b></li>
+             </ul>
+             <ul><li><b>5.Expert Systems</b></li></ul>
+             <ul><li><b>6.Fuzzy Logic</b></li></ul>
+             From this, we get to know that AI is technology, and Machine Learning is only one of the tools to solve the problem.
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 70%;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                
+            </b>
+        </p>
+    </div>
+    <p class="article-content">
+    Machine Learning is the science of getting machines to interpret, process, and analyze data in order to solve real-world problems. Machine Learning is one way to accomplish that. It uses statistical analysis to learn autonomously and improve its function.
+    </p>
+    <p class="article-content">
+        The above video suggests the advancement of AI as Machine Learning and Deep Neural Nets.
+    </p>
+    <p class="article-subhead">
+        AI is an ocean and ML is just a sea.
+    </p>
+    <p class="article-content">
+        ML is a core component of many AI uses. It is the part of AI that enables a strand of AI to improve, whether that’s improving an image recognition algorithm to recognize a cat versus a car, or speech recognition being able to understand multiple accents in a given language.
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 70%;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+        Deep Learning as part of ML and AI.
+    </p>
+    <p class="article-content">
+        Deep artificial neural networks are a set of algorithms that have set new records in accuracy for many important problems, such as image recognition, sound recognition, recommender systems, NLP. For example, deep learning is part of DeepMind’s well-known AlphaGo algorithm, which beat the former world champion Lee Sedol at Go in early 2016.
+     <br>
+    It can be briefed as to the field of study that gives computers the ability to learn without being explicitly programmed — while adding that it tends to result in higher accuracy, require more hardware or training time, and perform exceptionally well on machine perception tasks that involved unstructured data such as blobs of pixels or text.
+    </p>
+    <p class="article-subhead">
+        Conclusion
+    </p>
+    <p class="article-content">
+        The difference between machine learning and AI is that machine learning represents one of — but not the only — precursors to creating a narrow AI. Specifically, machine learning is the best and fastest way to create a narrow AI model for the purpose of categorizing data, detecting fraud, recognizing images, or making predictions about the future.
+        <br>
+        Although hyperbolic marketing has in many ways distorted the meaning behind machine learning and AI, the advantage of the commodifying technology is that it’s now easier than ever to use and create machine learning models.
+        <br>
+        By now I guess my blog- AI vs Machine Learning has made you clear that AI is a bigger picture, and Machine Learning and Deep Learning are its subparts, so concluding it I would say the easiest way of understanding the difference between machine learning and deep learning is to know that deep learning is machine learning. More specifically, it’s the next evolution of machine learning.
+    </p>
 </div>
 {% endblock %}
