--- a/main/templates/main/Articles/MLAI/1002.html
+++ b/main/templates/main/Articles/MLAI/1002.html
@@ -2,7 +2,74 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Advantages and Disadvantages of Machine Learning</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Shreyas PJ</a></b>
+        <br>
+    </div>
+   <p class="article-content">
+    <div class="article-content">
+        <ul>
+            <li><b>1. Great opportunities to progress: </b>The growth is enormous and very diverse, slipping its tentacles into a variety of industries – from finance and healthcare to transport and education. As a machine learning engineer, you will not only witness the technological revolution but be a part of it. Additionally, machine learning engineering as a career is an extremely lucrative job. The starting salary of a machine learning engineer in India is INR 6,80,000 per year.</li>
+        </ul>
+        <ul>
+            <li><b>2. Work that matters: </b>Machine learning engineering will allow you to work and build real-world products, right from autonomous cars to security drones. These are not some numbers you crunch into a spreadsheet only to never hear about them again.
+        <div class="img-container" style="text-align: center;">
+            <img class="article-img" style="height: 70%;" src="" alt="1001">
+            <p classname="article-img-desc">
+                <b>
+                    
+                </b>
+            </p>
+    </div>
+    As a data scientist, you’ll be able to analyze data and extract value from it.
+As a machine learning engineer, you’ll be able to make use of that information to train a machine learning model to predict results. In several organizations, machine learning engineers work with data scientists for better synchronization of work products.
+Surprisingly some organizations in India interchange the designations of a Data Scientist and a ML Engineer.
+            </li>
+        </ul>
+        <ul>
+            <li><b>3. Continuous Improvement: </b>
+                Machine Learning algorithms are capable of learning from the data we provide. As new data is provided, the model’s accuracy and efficiency to make decisions improve with subsequent training. Giants like Amazon, Walmart, etc collect a huge volume of new data every day. The accuracy of finding associated products or recommendation engine improves with this huge amount of training data available.</li>
+        </ul>
+        <ul>
+            <li><b>4. Automation for everything: </b>A very powerful utility of Machine Learning is its ability to automate various decision-making tasks. This frees up a lot of time for developers to use their time to more productive use. For example, some common use we see in our daily life is social media sentiment analysis and chatbots. The moment a negative tweet is made related to a product or service of a Company, a chatbot instantly replies as first-level customer support. Machine Learning is changing the world with its automation for almost everything we can think of.</li>
+        </ul>
+        <ul>
+            <li><b>5. Trends and patterns identification: </b>This advantage is a no brainer. All of us interested in Machine Learning technology are well aware of how the various Supervised, Unsupervised and Reinforced learning algorithms can be used for various classification and regression problems. We identify various trends and patterns with a huge amount of data using this technology. For example, Amazon analyzes the buying patterns and search trends of its customers and predicts products for them using Machine Learning algorithms.</li>
+        </ul>
+        <ul><li><b>6. Wide range of applications: </b>Machine Learning is used in every industry these days, for example from Defence to Education. Companies generate profits, cut costs, automate, predict the future, analyze trends and patterns from the past data, and many more. Applications like GPS Tracking for traffic, Email spam filtering, text prediction, spell check and correction, etc are a few used widely these days. Machine Learning is a branch of Artificial Intelligence, the latest trends and applications can be found in Artificial Intelligence Trends in 2020.</li></ul>
+    </p>
+</div>
+    <p class="article-subhead">
+        Disadvantages of machine learning as a career option in India.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>1. Demanding job: </b>Training models, handling data as well as making and testing prototypes on a daily basis can lead to mental exhaustion.
+                    <br>
+                    As a machine learning engineer, data munging (or data wrangling) will also be a painful part of your job. Data munging simply means converting raw, unprocessed data into a more appropriate, usable form. Sometimes you might even have to scrape data from a paginated website and integrate it with your client’s internal data while simultaneously dealing with date-time and data type errors.
+                    <br>
+                    Doing this is not everyone’s cup of coffee and it could get frustrating for some.
+                    </li>
+            </ul>
+                    <ul>
+                        <li><b>2. It takes time and resources for machine learning to yield tangible results: </b>
+                            Machine learning occurs over time. So, there will be a period when your interface or algorithm won’t be developed enough for your company’s needs. The precise amount of time required will depend upon the nature of data, data source and how it is to be used.
+                            <br>
+                            You’ll simply need to wait as new data is generated — sometimes this can take days, weeks, months or even years! 
+                            </li>
+                    </ul>
+                    <ul>
+                        <li><b>3. Need to stay updated: </b>As mentioned earlier, machine learning is a rapidly evolving field. Due to this, machine learning engineers are required to spend a considerable amount of time learning about the latest updates in the field.
+                            <br>
+                            Reading and learning research papers from various universities and organizations will have to become a regular part of your life if you want to pursue this field. So, unless the idea of ‘learning for life’ does not appeal to you, you should rethink your decision of being a machine learning engineer or even a Data Scientist.
+                            </li>
+                    </ul>
+            </p>
+    </div>
 </div>
 {% endblock %}
