--- a/main/templates/main/Articles/MLAI/1003.html
+++ b/main/templates/main/Articles/MLAI/1003.html
@@ -2,7 +2,185 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div style="text-align: center">
+        <h3 class="article-subhead" >Data Science</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Shreyas PJ</a></b><br><br>
+        <i>
+            The world is generating data at a higher rate and so the need for “Data Science” and “Data Analytics” tools increases to analyze and manage this “Big Data”.
+        </i>
+    </div>
+    <br>
+    <br>
+    <p class="article-content">
+        Data Science is a field that refers to collective processes, theories, concepts, and tools that enable the review, analysis, and extraction of valuable insights and information from raw data which can be in any form like text, pixel data, or numerical data.
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Data Representation
+            </b>
+        </p>
+    </div>
+    <p class="article-subheading">
+        Applications of Data Science
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>Digital Advertisement</li>
+            </ul>
+            <ul>
+                <li>Internet Research</li>
+            </ul>
+            <ul>
+                <li>Recommender System</li>
+            </ul>
+            <ul>
+                <li> Image/speech recognition</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subheading">
+        Tools and languages used.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>Python</li></ul>
+                <ul><li> R</li></ul>
+                    <ul><li>SAS</li></ul>
+                        <ul><li>SQL.</li></ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                
+            </b>
+        </p>
+    </div> 
+    <div>
+        <h3 class="article-subhead">Data Analytics</h3>
+    </div>
+    <p class="article-content">
+        Data Analytics(DA) is the process of examining data sets to conclude the information they contain, increasingly with the aid of specialized systems and software.
+    </p>
+     <p class="article-subheading">
+        Application areas.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>Gaming</li></ul>
+              <ul><li>Travel</li></ul>
+                <ul><li> Energy management</li></ul>
+                    <ul><li> Healthcare.</li></ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                
+            </b>
+        </p>
+    </div> 
+
+    <p class="article-subheading">
+        Tools and Languages used
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>R</li></ul>
+              <ul><li>Tableau Public</li></ul>
+                <ul><li>Apache Spark for big data analysis.</li></ul>
+        </div>
+    </p>
+    <div>
+        <h3 class="article-subhead">Big Data</h3>
+     </div>
+     <p class="article-content">
+        Big Data refers to voluminous amounts of structured data like the information available in form of spreadsheets or tabular columns and unstructured data which is raw data available in form of images, speech, or raw text that organizations can potentially mine and analyze for business gains.
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                
+            </b>
+        </p>
+    </div> 
+    <p class="article-subheading">
+        Application areas
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+<ul><li>Communication</li></ul>
+    <ul><li>Retail</li></ul>
+        <ul><li>Financial services</li></ul>
+            <ul><li>Education.</li></ul>
+        </div>
+    </p> 
+    <p class="article-subheading">
+        Tools and Languages.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+<ul><li>Hadoop</li></ul>
+    <ul><li>NoSQL</li></ul>
+        <ul><li>Hive</li></ul>
+        </div>
+    </p>
+    <div>
+        <h3 class="article-subhead">Most coveted jobs in Data Science.</h3>
+    </div>
+    <p class="article-content">
+        <div class="article-content">
+<ul><li>Data Scientist</li></ul>
+    <ul><li>Machine Learning Engineer</li></ul>
+        <ul><li>Machine Learning Scientist</li></ul>
+        <ul><li>Data Architect</li></ul>
+        <ul><li>Data Engineer</li></ul>
+        <ul><li>Business Intelligence(BI) Developer</li></ul>
+        <ul><li>Data Analyst</li></ul>
+        </div>
+        <br>
+        <p class="article-content">
+        Even though many of these jobs sound similar, there are a lot of subtle differences between each of them.
+        </p>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                This image shows the expectations of a modern Data Scientist.
+            </b>
+        </p>
+    </div> 
+
+ <div>
+        <h3 class="article-subhead">Machine Learning Salary in India</h3>
+    </div>
+    <p class="article-content">
+        The demand for Machine Learning is high but companies require individuals to have the correct skill sets. The demand for these engineers is always high. The list is endless. That’s the primary reason machine learning salary in India is quite high. The ever-increasing demand. Additionally, the better the experience, the higher is the salary. The average machine learning salary in India, according to ‘Payscale’, is approximately Rs. 686,281 per year, inclusive of bonuses and profit-sharing.
+</p>
+<div class="img-container" style="text-align: center;">
+    <img class="article-img" style="height: 500px;" src="" alt="1001">
+    <p classname="article-img-desc">
+        <b>
+            
+        </b>
+    </p>
+</div>
+
+<div>
+    <h3 class="article-subhead">Summary</h3>
+    </div>
+    <p class="article-content">
+        Even though we have seen the distinctions between these fields of work, we realize that they are very closely inter-related to each other and the knowledge in one of these fields will be required in the other 2 fields. So we are working differently with data from different domains and using different tools but they all unite in the fact that they all feed on the same sources of data.
+    </p>
 </div>
 {% endblock %}
