--- a/main/templates/main/Articles/WebDev/1001.html
+++ b/main/templates/main/Articles/WebDev/1001.html
@@ -2,7 +2,76 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>What is Web Development?</h3>
+    </div> 
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Bhabatosh Mahanta</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        It is the non-design elements that developers employ to build a
+        website. It includes writing both markup and coding. Large
+        organizations employ Agile Technologies to manage hundreds of
+        web developers working to deliver the desired output.
+    </p>
+    <p class="article-subhead">
+        Who is a Web Developer?
+    </p>
+    <p class="article-content">
+        there are 3 kinds of Web Developers – Full
+Stack Developer, Back End Developer, and Front End Developer.
+As the name suggests, the Back End Developers work with the
+servers while Front End Developers work on the user interface and
+experience. 
+<br>
+In simple words, a web developer is responsible for the
+programming and coding of web-based services and websites that
+happens at the back end. It is often quite difficult to clearly
+differentiate between the roles and responsibilities in different web
+positions, such as web developers and designers. Because of the
+demand, web developer salary in India is one of the highest.
+<br>
+However, we can safely say that web developers are more
+technically inclined than their web designing counterparts who are
+more focused on the look and feel of a website. The projects that
+web developers are involved in vary in complexity. They could be
+asked to work on simple web pages one time and multi-layered e-
+commerce web applications the other.
+    </p>
+    <p class="article-subhead">
+        What does a web developer do?
+    </p> 
+    <p class="article-content">
+        The responsibilities of a web developer include talking to clients
+        over the phone or meeting with them to understand their
+        requirements. It is very important for web developers to get clear
+        answers to questions like what a client wants their website to do for
+        them.
+        <br>
+        What features does a client want their website to have? If you start
+        working on the website before speaking to the client, the website
+        won’t even be close to what the client expects you to deliver. You
+        will be required to redo it. Waste of time, isn’t it? This is a lesson
+        that every budding web developer needs to learn sooner rather than
+        later to make successful strides ahead in their respective careers.  
+    </p>
+    <p class="article-subhead">
+        Responsibilities of Web Developers
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>Connecting the landing page to various databases and tables</li></ul>
+            <ul><li>How to understand the number of people who visited your website
+                and their details</li></ul>
+                <ul><li>Linking the website to a payment gateway (incase its an e-
+                    commerce platform)</li></ul>
+                    <ul><li>Optimize the page for viewing on mobile</li></ul>
+                    <ul><li>Server hosting and network connectivity issues</li></ul>
+        </div>
+        </p>
     
 </div>
 {% endblock %}
