--- a/main/templates/main/Articles/WebDev/1002.html
+++ b/main/templates/main/Articles/WebDev/1002.html
@@ -2,7 +2,54 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Advantages and Disadvantages Of Web Developement</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Bhabatosh Mahanta</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        Web app development has its positive and negative side, as we have been discussing above. Let’s start with its advantages and later go on to see its disadvantages. Subsequently, it should be you who decides what suits your needs or preferences best.
+    </p>
+    <p class="article-subhead">
+        Advantages of web app development
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>Web apps are developed with programming languages such as HTML and CSS, which are well known among IT professionals.</li></ul>
+            <ul><li>Unlike native apps, a single web app is able to reach out to all devices. It’s programmed to run on any operating system. It must appropriately adapt to iOS, Android, and Windows Phone — amongst other operating systems</li></ul>
+            <ul><li>These apps run on the device’s own web browser through a simple URL.</li></ul>
+            <ul><li>They don’t need to be downloaded and installed from app stores like Google Play or Apple’s App Store. This translates into money-saving since having a direct link through a web app is free.</li></ul>
+            <ul><li>They may also open websites. This means that they don’t require to be updated in the way common apps do. In this sense, it’s the website to which the application is linked that will be updated.</li></ul>
+            <ul><li>The most important benefit you can draw off from it is its price. Web app development is the cheaper kind of app development. It consists of creating a link or several links between the application and an URL. Developing a native app or an interpreted app entails a higher cost but its chances to succeed are far greater.</li></ul>
+            <ul><li>On the other hand, a web app’s development time is lower. Hence it’s lower price.</li></ul>
+            <ul><li>As a web developer, you get to conceptualize and create websites from start to finish. It is common knowledge that developers are incredible artists. You get to create something tangible that will have an impact on your users.
+                <br>
+            For instance, if you create an easy-to-navigate site for a brand, users will spend more time on it and get more value from the website. The opportunities web developers have to do some creative work are only limited by their imagination.</li></ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Advantages and Disadvantages Web Developement
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+       Disadvantages of web app development
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>As we indicated previously, a single web app is able to reach out to all devices. The website must, of course, be programmed in a way it can be shown regardless of the device’s operating system. If it’s not a responsive website, you could experience problems when displaying it on iOS, Android, or Windows Phone.</li></ul>
+            <ul><li>You will have to spend the money you intended to save developing the application in improving your website. It’s of no use to make a web app if you don’t adapt your website in a way it can be shown with quality on any device. Let’s keep in mind that the updates are done on your website and not on your web app</li></ul>
+            <ul><li>If your website undergoes any kind of issue, your application will be in trouble too. Don’t assume that your web app will work perfectly if you don’t have a quality corporate website. For example, if the website’s URL takes some time to load or if uncomfortable ‘cookies’ show up when entering the website, accessing it through the application will entail the same issues. The problem is not inherent to your web app. It’s rather located in the website’s development.</li></ul>
+            <ul><li>In addition, there will be some access restrictions as to certain hardware features of the device it’s running on.
+            </li></ul>
+        </div>
+        
 </div>
 {% endblock %}
