--- a/main/templates/main/Articles/WebDev/1003.html
+++ b/main/templates/main/Articles/WebDev/1003.html
@@ -2,7 +2,171 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Roadmap To Become Web Developer</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Bhabatosh Mahanta</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-subhead">Skills Required by a Front End
+        Developer</p>
+    <p class="article-content">
+    As for any other domain in the web
+development field, you first need to
+know how it all works at the root level.</p>
+<p class="article-content">
+    <div class="article-content">
+        <ul><li>You need to start from HTML – the
+            basic building block of every web
+            page.</li></ul>
+            <ul><li>You need to know CSS (Cascading
+                Style Sheets). All the styling
+                elements of an HTML web page are
+                covered in CSS.</li></ul>
+                <ul><li>Libraries like Bootstrap and
+                    MaterializeCSS make styling easier
+                    with predefined classes. Add to your
+                   HTML tag to implement a particular
+                    style.</li></ul>
+                <ul><li>JavaScript is necessary for a
+                    responsive or a mobile-first web
+                    page.</li></ul>
+                </div></p>
+                <p class="article-content">
+                    There are many front-end frameworks
+and libraries out there that you can use
+to ease up your development process.
+Most popular front-end examples
+include jQuery, Angular, ReactJS, and
+VueJS. You can decide to pick any of
+these based on your requirements and
+you can develop a more dynamic web
+application in a shorter period. But
+remember that the core element –
+HTML, CSS, and JavaScript remains
+common to all.
+                </p>
+<p class="article-subhead">Skills Required by a Back End
+    Developer</p>
+    <p class="article-content">
+        A Back End Developer needs to know
+the architecture of the website and
+ensure all requests can be made on the
+server.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li>Know different languages to write
+                the code. These include PHP,
+                Python, JavaScript, Ruby, etc.
+                Knowledge about frameworks like
+                Django for Python, Node.js for
+                JavaScript, or Larval for PHP can be
+                helpful too.</li></ul>
+                <ul><li>Knowledge of different databases
+                    which include  – MySQL, MongoDB,
+                    Oracle, etc. – their workings, quirks,
+                    and downsides.</li></ul>
+                    <ul><li>Knowledge about the different data
+                        structures including REST and SOAP
+                        APIs.</li></ul>
+                        <ul><li>Back End Development requires
+                            working on a computer, sometimes by
+                            yourself. It is necessary to understand
+                            that the Back End Developer is
+                            responsible for helping to plan and
+                            execute the early development stages
+                            of a website or web page.</li></ul>
+        </div>
+    </p>
+    <p class="article-subhead">
+        Why should you choose a career in web
+        development?
+    </p>
+    <p class="article-content">
+        The web is going to get even bigger and better with time. Web
+developers will continue playing an important role. So having the
+skills to develop websites has several advantages.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul><li><b>Job flexibility: </b>The job of a web developer is highly flexible. You
+                are allowed to work the way you want to. If you are a team player,
+                you can work full-time, or you can even go solo by working as a
+                freelancer.</li></ul>
+                <ul><li><b>It’s easy to begin: </b> Even if you are not willing to be work with a
+                    company on a full-time basis, there is still plenty that you can do as
+                    a freelancer. All you need is the right skills.</li></ul>
+                    <ul><li><b>There are always more skills to add to your resume: </b> HTML,
+                        JavaScript, and CSS are the basic skills that you can’t do without as
+                        a web developer. However, if you are passionate about it and want
+                        to further your career, there’s plenty more to learn as well, including
+                        AngularJS, Ajax, PHP, Ruby, and more. To make your career to
+                        grow as a web developer and earn the highest possible web
+                        developer salary in India, you need to have update yourself with
+                        required skills.</li></ul>
+                        <ul><li><b>Web development is interesting and fun: </b> Web developers love
+                            everything about their work. Web development is amongst those
+                            jobs that have a significantly higher job satisfaction rate. So, there
+                            are opportunities galore for Java developers, and the indispensable
+                            nature of their jobs ensures that web developer salary in India is
+                            quite elevated.</li></ul>
+        </div>
+    </p>
+                            <p class="article-subhead">
+                               A plenty job opportunities
+                            </p>
+                            <p class="article-content">
+                                There are more jobs than
+                                you think in web development. Whatever happens, online
+                                businesses will continue to build new websites or redesign existing
+                                
+                                ones to stay competitive and relevant.The demand for these
+                                developers are always high. The list is endless. That’s the primary
+                                reason web developer salary in India is quite high. The ever
+                                increasing demand.
+                            </p>  
+                   
+                            <p class="article-content">
+                                <div class="article-content">
+                                    <ul><li><b>Back-end web developers </b>are responsible for the overall technical construction of the website. They create the basic framework of the site and ensure that it works as expected. Back-end web developers also establish procedures for allowing others to add new pages to the website and meet with management to discuss major changes to the site.</li></ul>
+                                    <ul><li><b>Front-end web developers</b>are responsible for how a website looks. They create the site's layout and integrate graphics, applications (such as a retail checkout tool), and other content. They also write webdesign programs in a variety of computer languages, such as HTML or JavaScript.</li></ul>
+                                    <ul><li><b>Webmasters</b>maintain websites and keep them updated. They ensure that websites operate correctly, and they test for errors such as broken links. Many webmasters respond to user comments as well.</li></ul>
+                                </div>
+                            </p>
+                            <p class="article-subhead">
+                                Job Outlook for Web Developers
+                            </p>     
+                            <p class="article-content">
+                                Employment of web developers is projected to grow 8 percent over the next ten years, much faster than the average for all occupations.
+<br>
+Employment of web developers is projected to grow as ecommerce continues to expand. Online purchasing is expected to grow faster than the overall retail industry. As retail firms expand their online offerings, demand for web developers will grow. In addition, an increase in the use of mobile devices to search the web will lead to increased demand for web developers. Instead of designing a website for a desktop computer, developers will have to create sites that work on mobile devices with many different screen sizes, leading to more work.
+<br>
+Because websites can be built from anywhere in the world, some web developer jobs may be moved to countries with lower wages. However, this practice may decline because the cost of managing web developers in multiple countries can offset the savings to businesses. Furthermore, web developers must understand cultural nuances that allow webpages to communicate effectively with users, and domestic web developers are better equipped for this task, curtailing the work that may be moved to other countries.
+                            </p>  
+                            <p class="article-subhead">
+                                Employer Salaries for Web Developer
+                            </p>  
+                            <div class="img-container" style="text-align: center;">
+                                <img class="article-img" style="height: 500px;" src="" alt="1001">
+                                <p classname="article-img-desc">
+                                    <b>
+                                        Pay by experience level
+                                    </b>
+                                </p>
+                            </div>    
+                            <p class="article-content">
+                                An entry-level Web Developer with less than 1 year experience can expect to earn an average total compensation (includes tips, bonus, and overtime pay) of ₹234,647 based on 630 salaries. An early career Web Developer with 1-4 years of experience earns an average total compensation of ₹305,513 based on 2,607 salaries. A mid-career Web Developer with 5-9 years of experience earns an average total compensation of ₹581,458 based on 386 salaries. An experienced Web Developer with 10-19 years of experience earns an average total compensation of ₹991,587 based on 73 salaries.
+                            </p>   
+                            <p class="article-subhead">
+                               Summing Up
+                            </p>
+                            <p class="article-content">
+                                Web development is a vast field and every business requires a proper functioning website. As you have seen all the different aspects of web development, it’s time now that you decide which one you want to choose! There is one thing you should know, getting the right skills is necessary. Also, you need to keep upgrading your skills to get the highest possible Web Developer Salary in India.
+                            </p>                       
+                                   
 </div>
 {% endblock %}
