--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -148,7 +148,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Machine Learning: Introduction</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Machine Learning is the science of getting machines to interpret, process, and analyze data in order to solve real-world problems. Machine Learning is one way to accomplish that. It uses statistical analysis to learn autonomously and improve its function.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'ml1' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -164,7 +164,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About Machine Learning</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">As a data scientist, you’ll be able to analyze data and extract value from it. As a machine learning engineer, you’ll be able to make use of that information to train a machine learning model to predict results.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'ml2' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -180,7 +180,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Data Scientist</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Even though we have seen the distinctions between these fields of work, we realize that they are very closely inter-related to each other and the knowledge in one of these fields will be required in the other 2 fields. So we are working differently with data from different domains and using different tools.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'ml3' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -198,8 +198,8 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Web Development: Introduction</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <div style="text-align: center;">
+                      <p class="card-text">Web Development is the non-design elements that developers employ to build a website. It includes writing both markup and coding. Large organizations employ Agile Technologies to manage hundreds of web developers working to deliver the desired output.</p>
+                      <div style="text-align: center;"> 
                         <a href="{% url 'web1' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
                     </div>
@@ -214,7 +214,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About Web Development</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Web app development has its positive and negative side, as we have been discussing above. Let’s start with its advantages and later go on to see its disadvantages. Subsequently, it should be you who decides what suits your needs or preferences best.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'web2' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -230,7 +230,9 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Web Developer</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Web development is a vast field and every business requires a proper functioning website. You need to keep upgrading your skills to get the highest possible Web Developer Salary in India. .As for any other domain in the web
+                        development field, you first need to
+                        know how it all works at the root level.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'web3' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
